--- a/style.css
+++ b/style.css
@@ -88,5 +88,63 @@ body {
       body header hr {
         width: 40vw;
         margin-bottom: 1em; } }
+  body .envoyer {
+    background-color: white;
+    box-shadow: 0px 7px 30px #0000008a;
+    height: 50vh;
+    width: 80vh;
+    padding: 0;
+    border-radius: 3%;
+    border: solid 2px #00000036; }
+    body .envoyer form {
+      margin: 60px;
+      /* input file style */ }
+      body .envoyer form label {
+        font-weight: bold;
+        color: #1c97d6; }
+      body .envoyer form input, body .envoyer form optgroup, body .envoyer form select, body .envoyer form textarea {
+        margin-top: 10px;
+        margin-bottom: 50px;
+        font-family: inherit;
+        font-size: inherit;
+        line-height: inherit;
+        width: 90%;
+        background: none;
+        outline: none;
+        border: none;
+        resize: none;
+        border-bottom: solid 1px #1c97d6; }
+      body .envoyer form button {
+        width: 70%;
+        background-color: #1c97d6;
+        color: white;
+        font-weight: bold;
+        margin-top: 40px; }
+      body .envoyer form .uploader {
+        overflow: auto; }
+      body .envoyer form #listing {
+        height: 200px;
+        list-style: none;
+        font-weight: bold;
+        font-size: 15px;
+        color: #1c97d6; }
+      body .envoyer form .btn-tertiary {
+        color: #1c97d6;
+        padding: 0;
+        line-height: 40px;
+        width: 300px;
+        margin: auto;
+        display: block;
+        border: 2px solid #1c97d6; }
+      body .envoyer form .input-file {
+        border: none;
+        margin-top: 20px;
+        margin-bottom: 5px !important;
+        font-weight: bold;
+        font-size: 15px;
+        color: #1c97d6; }
+        body .envoyer form .input-file:hover, body .envoyer form .input-file:focus {
+          color: #3fade6;
+          border-color: #6cc1ec; }
 
 /*# sourceMappingURL=style.css.map */
