--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -13,7 +13,7 @@
     <link rel="icon" sizes="64x64" href="img/favicon-64.png" type="image/png">
     <link rel="icon" sizes="96x96" href="img/favicon-96.png" type="image/png">
     <link  rel="stylesheet" type="text/css" href="style.css" />
-    <title>ACCESS-MOVIE</title>
+    <title>File-Walk</title>
 </head>
 <body>
     <header id="header" class="container-fluid d-flex flex-column justify-content-center align-items-center" id="home">
@@ -39,10 +39,14 @@
             </nav>
         </div> 
             <p class="icone"></p>
-                <h1 class="title d-flex flex-row" >Tranferez vos fichiers</span></h1>
+                <h1 class="title d-flex flex-row" >Transférez vos fichiers</span></h1>
 
             <hr>
     </header>
+    <section class="container-fluid affichage d-flex flex-wrap align-items-center justify-content-center" >
+                {% block content %}
+                {%  endblock %}
+    </section>
    
 
 
