--- a/view/expediteur.html.twig
+++ b/view/expediteur.html.twig
@@ -7,35 +7,35 @@
 
    
     <div class="envoyer container"> 
-            <form id="formulaire" class="row" action="#contact" method="POST" enctype="multipart/form-data" name="vform" onSubmit="return Validate();">
+            <form id="formulaire" class="row" action="reception.php" method="POST" enctype="multipart/form-data">
                <div class="infos col-6"> 
                <div id="email_div "> 
-                  <label>Votre email</label> <br>
+                  <label for="email_expediteur">Votre email</label> <br>
                   <div id="email_error"></div>
-                  <input id="email" type="email" name="email" class="textInput">
+                  <input id="email" type="email" name="email_expediteur" class="textInput">
                </div>
                <div id="email_div "> 
-                  <label>Email du Destinataire</label> <br>
+                  <label for="email_destinataire">Email du Destinataire</label> <br>
                   <div id="email_error"></div>
-                  <input id="email" type="email" name="email" class="textInput">
+                  <input id="email" type="email" name="email_destinataire" class="textInput">
                </div>
                <div id="message_div ">  
-                  <label>Ecrivez votre message</label> <br>
+                  <label for="message">Ecrivez votre message</label> <br>
                   <div id="message_error"></div>
                   <textarea id="message" name="message" class="messageInput"  rows=4 cols=40> </textarea>   
                </div>
                </div>  
                <div class="col-6 uploader">
-                     <label for="file" class="btn btn-tertiary js-labelFile">
+                     <label for="fichier" class="btn btn-tertiary js-labelFile">
                       <i class="far fa-caret-square-down"></i>
                       <span class="js-fileName">Charger vos fichiers</span>
                     </label>
-                     <input type="file" class="input-file" id="filepicker" name="fileList" webkitdirectory multiple />
+                     <input type="file" class="input-file" id="fichier" name="fichier" value="100000" multiple />
                      <ul id="listing"></ul>
                      
                </div>
                <div class="col-12 d-flex justify-content-center align-items-center">
-                  <button id="button" type="submit" class="btn ">Envoyer</button>
+                  <button id="button" type="submit" name="envoyer" value="Upload File Now" class="btn ">Envoyer</button>
                </div>
            </form> 
         </div>
