--- a/view/expediteur.html.twig
+++ b/view/expediteur.html.twig
@@ -26,9 +26,8 @@
                   </div>
                </div>  
                <div class="uploader">
-                     <label for="fichier">
-                      </label>
-                     <input type="file" name="fichier" class="input-file" id="fichier"  value="100000" multiple >
+                     <label for="fichier" class="label-file"><i class="far fa-plus-square"></i> Ajoutez vos Fichiers </label>
+                     <input type="file" name="fichier" class="input-file" id="fichier"  value="100000" multiple>
                      <ul id="listing"></ul>
                      
                </div>
