--- a/style.scss
+++ b/style.scss
@@ -145,18 +145,15 @@ body{
                     font-size:15px;
                     color: #1c97d6;
                     overflow: auto;
-                    display: none;
+                    // display: none;
                 }
-                .btn-tertiary {
-                    color: #1c97d6;
-                    padding: 0;
-                    line-height: 40px;
-                    width: 300px;
-                    margin: auto;
-                    display: block;
-                    border: 2px solid #1c97d6;
-                  
-                  }
+                .label-file{
+                    margin-top: 20px;
+                    i{
+                        font-size: 40px;
+                        margin-right: 15px;
+                    }
+                }
                   
                   /* input file style */
                   
@@ -167,6 +164,7 @@ body{
                       font-weight: bold;
                       font-size:15px;
                       color: #1c97d6;
+                      display: none;
                       &:hover, 
                       &:focus {
                         color: lighten(#1c97d6, 10%);
