add on sql data

--- a/view/expediteur.html.twig
+++ b/view/expediteur.html.twig
@@ -7,7 +7,7 @@
 
    
     <div class="envoyer container"> 
-            <form id="formulaire"  action="#" method="POST" enctype="multipart/form-data">
+            <form id="formulaire"  action="/transfer/expediteur/sendform" method="POST" enctype="multipart/form-data">
                <div class="infos"> 
                <div id="email_div "> 
                   <label for="email_expediteur">Votre email</label> <br>
