--- a/view/home.html.twig
+++ b/view/home.html.twig
@@ -38,7 +38,7 @@
                 <i class="far fa-plus-square"></i> 
                 Ajoutez vos Fichiers 
             </label>
-            <input type="file" name="fichier" class="input-file" id="fichier"  value="100000" multiple>
+            <input type="file" name="fichier[]" class="input-file" id="fichier"  value="100000" multiple>
             <ul id="listing">
                 
             </ul>
