--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -39,7 +39,7 @@
             </nav>
         </div> 
             <p class="icone"></p>
-                <h1 class="title d-flex flex-row" >Transférez vos fichiers</span></h1>
+                <h1 class="title d-flex flex-row" >Files Walk</span></h1>
 
     </header>
     <section class="container-fluid affichage d-flex flex-wrap align-items-center justify-content-center" >
