--- a/view/page-download.html.twig
+++ b/view/page-download.html.twig
@@ -1,9 +1,11 @@
 {% extends 'index.html.twig' %} 
 
 {% block content %}
-	<h1>Download page</h1>
+	<section class="container-fluid d-flex flex-column align-items-center justify-content-center" >
+		<h1>Download page</h1>
 
-	<a href="{{url}}">Download your file</a>
+		<a href="{{url}}">Télécharger le fichier</a>
 
-	<a href="{{baseurl}}">Upload other file</a>
+		<a href="{{baseurl}}">Aller à la page d'accueil</a>
+	</section>
 {% endblock %}
