--- a/view/result-upload.html.twig
+++ b/view/result-upload.html.twig
@@ -1,10 +1,13 @@
 {% extends 'index.html.twig' %} 
 
 {% block content %}
-<h1>Success</h1>
+    <section class="container-fluid d-flex flex-column align-items-center justify-content-center" >
+        <h1>Success</h1>
 
-<a href="{{url}}">Test download</a>
+        <a href="{{url}}">Lien vers la page de Téléchargement</a>
 
-<a href="{{baseurl}}">Upload other file</a>
+        <a href="{{baseurl}}">Revenir à la page D'acceuil</a>
+    </section>
+
 
 {% endblock %}
