Create files to show all files following the email

--- a/view/index.html.twig
+++ b/view/index.html.twig
@@ -26,6 +26,9 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                     <li class="ml-1 mr-1 nav-item d-flex justify-content-center align-items-center">
+                        <a class="m-1 nav-link" href="allfiles">All files <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="ml-1 mr-1 nav-item d-flex justify-content-center align-items-center">
                         <a class="m-1 nav-link" href="#">A Propos <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
@@ -55,7 +58,9 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+        <script src="dateFormat.js"></script> 
         <script src="app.js"></script> 
+        
 </body>
 
 </html>
