--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,36 @@
 body{
-    background: linear-gradient(#ffffff00, #7d7d7db0);
-    height: 100vh;
-        header{
 
+    // background: linear-gradient(#ffffff00, #7d7d7db0);
+    // height: auto;
+    animation: bgimg 20s linear infinite;
+    animation-delay: 0s;
+    transition: opacity 1s ease-in-out;
+    @keyframes bgimg {
+        0% {background:  linear-gradient(0.25turn, rgba(29, 148, 38, 0.19), rgba(0, 232, 255, 0.22)), url(bg/bg1.jpeg) no-repeat fixed center;
+            background-size: cover;
+            opacity: 1;
+            }
+        30% {background: linear-gradient(0.25turn, rgba(29, 148, 38, 0.19), rgba(0, 232, 255, 0.22)), url(bg/bg2.jpeg) no-repeat fixed center;
+            background-size: cover;
+            opacity: 1;
+            }
+        55% {background: linear-gradient(0.25turn, rgba(29, 148, 38, 0.19), rgba(0, 232, 255, 0.22)), url(bg/bg3.jpeg) no-repeat fixed center;
+            background-size: cover;
+            opacity: 1;
+            }
+        80% {background: linear-gradient(0.25turn, rgba(29, 148, 38, 0.19), rgba(0, 232, 255, 0.22)), url(bg/bg4.jpeg) no-repeat fixed center;
+            background-size: cover;
+            opacity: 1;
+
+            }
+        
+        100% {background: linear-gradient(0.25turn, rgba(29, 148, 38, 0.19), rgba(0, 232, 255, 0.22)), url(bg/bg1.jpeg) no-repeat fixed center;
+            background-size: cover;
+            opacity: 1;
+    
+            }  
+      } 
+        header{
             .container-fluid {
                 padding: 0;
                 margin-right: auto;
@@ -27,9 +55,10 @@ body{
             }
                 h1{
                     font-size: 3rem;
-                    margin-top: 10vh;
-                    margin-bottom: 3vh;
-                    color: #606061eb;
+                    margin-top: 15vh;
+                    margin-bottom: 8vh;
+                    color: #000000b5;
+                    letter-spacing: 10px;
                     text-transform: uppercase;
                     font-weight: bold;
                     text-shadow: 5px 29px 22px #00000030;
@@ -53,10 +82,10 @@ body{
                     }
                 }
                 h2{
-                    color:#d4d4d4eb;
-                    margin: 5vh;
+                    margin: 5vh; 
                     text-shadow: 5px 9px 12px #00000030;
                     font-size: 2rem;
+                    color: white;
                     @media (max-width: 575px) {
                        margin: 0vh;
                        font-size: 25px
@@ -101,19 +130,64 @@ body{
                  }       
             }
         }
+        .apropos{
+            .text-apropos{
+                background-color: #000000c2;
+                box-shadow: 0px 7px 30px #0000008a;
+                padding: 0;
+                border-radius: 3%;
+                border: solid 2px #00000036;
+                max-width: 80%;
+                padding: 50px;
+                font-size: 1.6rem;
+                color: white;
+            }
+            .img-apropos{
+                padding: 50px;
+            }
+        }
+        #result{
+            a{
+                color: white;
+            }
+            ul{
+                list-style: none;
+                text-decoration: none;
+            }
+        }
+        .result{
+            background-color: #000000c2;
+            box-shadow: 0px 7px 30px #0000008a;
+            width: 100vh;
+            padding: 0;
+            border-radius: 3%;
+            border: solid 2px #00000036;
+            margin-bottom: 10vh;
+            
+            h2{
+                color: white;
+                margin-top: 20px;
+            } 
+            h3{
+                color: white;
+                margin-top: 2vh;
+                margin: 20px;
+            } 
+        }
         .envoyer{
-            background-color: white;
+            background-color: #000000c2;
             box-shadow: 0px 7px 30px #0000008a;
             // height: 50vh;
             width: 100vh;
             padding: 0;
             border-radius: 3%;
             border: solid 2px #00000036;
-            form{
+            margin-bottom: 10vh;
+            form{ 
                 margin: 50px;
                 label{
                     font-weight: bold;
-                    color: #1c97d6;
+                    color: #45c0ff;
                 }
                 input, optgroup, select, textarea {
                     margin-top: 10px;
@@ -126,7 +200,8 @@ body{
                     outline: none;
                     border: none;
                     resize: none;
-                    border-bottom: solid 1px #1c97d6;
+                    border-bottom: solid 1px #45c0ff;
+                    color: white;
                 }
                 button {
                     width: 70%;
@@ -167,8 +242,8 @@ body{
                       display: none;
                       &:hover, 
                       &:focus {
-                        color: lighten(#1c97d6, 10%);
-                        border-color: lighten(#1c97d6, 20%);
+                        color: lighten(#45c0ff, 10%);
+                        border-color: lighten(#45c0ff, 20%);
                       }
                   }
             }
