--- a/view/apropos.html.twig
+++ b/view/apropos.html.twig
@@ -37,18 +37,27 @@
                        <!-- <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
                         <a class="m-1 nav-link" href="#">Devenir Membre</a>
                         </li>
+                        <li class="ml-1 mr-1 nav-item  d-flex justify-content-center align-items-center">
+                        <a class="m-1 nav-link" href="#">Connexion</a>
+                        </li>
                         -->
                     </ul>
                 </div>
             </nav>
         </div> 
             <p class="icone"></p>
-                <h1 class="title d-flex flex-row" >Files Walk</span></h1>
+                <h1 class="title d-flex flex-row" >A Propos</span></h1>
 
     </header>
-    <section class="container-fluid affichage d-flex flex-wrap align-items-center justify-content-center" >
-                {% block content %}
-                {%  endblock %}
+    <section class="container-fluid apropos d-flex flex-wrap align-items-center justify-content-center" >
+         <div class="row">
+             <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+                <p class="text-apropos">Files Walk a été créée en 2018 pour envoyer des fichiers volumineux partout dans le monde en toute simplicité. Il vous suffi de renseigner votre e-mail ainsi que celui du destinataire d'entrer un message et de charger votre fichier. Retrouvez File Walk sur Pc Tablette et Mobile</p>
+             </div>
+             <div class="img-apropos col-12 col-sm-12 col-md-12 col-lg-6">
+                 <img src="bg/apropos.jpeg" alt="mobile-computer" class="img-fluid">
+             </div>
+         </div>
     </section>
    
 
