--- a/view/files.html.twig
+++ b/view/files.html.twig
@@ -9,9 +9,9 @@
             Search
         </button>
 
-        <div id="result">
+        <h3 id="result">
 
-        </div>
+        </h3>
 
     </div>
 
