--- a/view/error-upload.html.twig
+++ b/view/error-upload.html.twig
@@ -1,7 +1,7 @@
 {% extends 'index.html.twig' %} 
 
 {% block content %}
-	<section class="container-fluid d-flex flex-column align-items-center justify-content-center" >
+	<section class="result container-fluid d-flex flex-column align-items-center justify-content-center" >
 		<h1>Error</h1>
 
 		{{errorMessage}}
